--- a/styles/ProductsPage.module.css
+++ b/styles/ProductsPage.module.css
@@ -2,12 +2,27 @@
 
 .productcontainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
   background-color: #f5f5f5;
   font-family: "Roboto", sans-serif;
   text-transform: capitalize;
+}
+
+.filterbox {
+  width: 550px;
+  height: 100vh;
+  background: palevioletred;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #f5f5f5;
+}
+
+.productcontainer .cards {
+  display: flex;
+  background-color: #f5f5f5;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
