--- a/styles/ProductsPage.module.css
+++ b/styles/ProductsPage.module.css
@@ -8,7 +8,7 @@
 }
 
 .filterbox {
-  width: 550px;
+  width: 750px;
   height: 100vh;
   background: palevioletred;
   display: flex;
@@ -32,36 +32,67 @@
   margin: 10px;
   border-radius: 10px;
   overflow: hidden;
-  width: 270px;
-  height: 350px;
+  width: 350px;
+  height: 370px;
+  transition: 0.3s ease-in-out;
 }
 
+.card:hover {
+  transform: translateY(-5px);
+  transition: 0.3s ease-in-out;
+  -webkit-box-shadow: 0px 10px 10px -18px rgba(242, 126, 147, 1);
+  -moz-box-shadow: 0px 10px 10px -18px rgba(242, 126, 147, 1);
+  box-shadow: 0px 14px 14px -18px rgba(242, 126, 147, 1);
+}
+
+/* .card:hover .image img {
+  transform: scale(1.1);
+  transition: 0.3s ease-in-out;
+} */
+
 .card .image {
-  width: 250px;
-  height: 200px;
+  width: 330px;
+  height: 330px;
   overflow: hidden;
 }
 
 .card .image img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .card .product_info {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  padding: 10px 0;
   padding: 10px;
+  width: 100%;
+  position: relative;
 }
 
 .product_info .name {
-  font-size: 16px;
-  text-align: center;
+  font-size: 18px;
   word-break: normal;
+  width: 270px;
 }
+
+.rating {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+}
+.rating span {
+  font-size: 16px;
+  margin-left: 5px;
+}
+.rating svg {
+  color: #f27e93;
+}
+
 .card .ratings {
   display: flex;
   align-items: center;
@@ -69,8 +100,9 @@
   font-size: 12px;
 }
 
-.ratings .reviews {
-  margin-left: 10px;
+.ratings span {
+  font-size: 16px;
+  color: gray;
 }
 
 .addtocart .price span {
@@ -83,7 +115,7 @@
   justify-content: space-between;
   padding: 6px;
   width: 100%;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .cart_button {
