--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 .nav {
   display: flex;
   width: 100%;
@@ -5,6 +7,8 @@
   align-items: center;
   padding: 1rem;
   box-shadow: 0px 0px 2px 0px rgba(47, 47, 47, 0.75);
+  position: relative;
+  font-family: "Roboto", sans-serif;
 }
 
 .main_nav {
