--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   -ms-overflow-style: none;
 }
 
@@ -22,26 +22,6 @@ a {
 }
 
 .curlcurenavbar {
-  overflow: hidden;
-}
-
-.swiper-button-next,
-.swiper-rtl .swiper-button-prev {
-  display: none !important;
-}
-
-.swiper-button-prev,
-.swiper-rtl .swiper-button-next {
-  display: none !important;
-}
-
-.productimageswiperthumbs .swiper-slide {
-  cursor: pointer;
-}
-
-.productimageswiperthumbswrapper {
-  width: 100%;
-  height: 100%;
   overflow: hidden;
 }
 
