--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,39 @@ a {
   }
 }
 
+.slick-initialized slick-slider {
+  margin-bottom: 0;
+}
+
+.slick-slider {
+  overflow-x: hidden;
+}
+
+.slider-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.slick-slide slick-active {
+  width: 20px;
+}
+.slick-arrow {
+  display: none !important;
+}
+.slick-track {
+  display: flex;
+  overflow-x: hidden;
+}
+
+.slick-dots {
+  display: none !important;
+}
+
+.slick-active {
+  display: flex;
+  justify-content: center;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
